# mamnatroot

./: .gitignore  LICENSE  Makefile  README.md  example.py  pyproject.toml  setup.py
src/mamnatroot/: solver.pyx
tests/: tests.ipynb
